2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Require automake >= 1.8, autoconf >= 2.59.

2003-12-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Misc cleanups and fixes.
	* startup/Makefile.am: Misc cleanups and fixes.
	* wrapup/Makefile.am: Misc cleanups and fixes.

2003-12-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add preinstallation dirstamp support.
	* clock/Makefile.am: Cosmetics.
	* console/Makefile.am: Cosmetics.
	* ide/Makefile.am: Cosmetics.
	* irq/Makefile.am: Add preinstallation dirstamp support.
	* network/Makefile.am: Cosmetics.
	* startup/Makefile.am: Cosmetics.
	* vectors/Makefile.am: Add preinstallation dirstamp support.
	* wrapup/Makefile.am: Cosmetics.

2003-12-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Remove all-local: $(ARCH).
	* console/Makefile.am: Remove all-local: $(ARCH).
	* ide/Makefile.am: Remove all-local: $(ARCH).
	* irq/Makefile.am: Remove all-local: $(ARCH).
	* network/Makefile.am: Remove all-local: $(ARCH).
	* startup/Makefile.am: Remove all-local: $(ARCH).
	* vectors/Makefile.am: Remove all-local: $(ARCH).
	* wrapup/Makefile.am: Remove all-local: $(ARCH).

2003-10-22	Joel Sherrill <joel@OARcorp.com>

	PR 510/bsps
	* irq/irq.h: Add extern C wrapper.

2003-09-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in include/Makefile.am.
	Reflect changes to bsp.am.
	* include/Makefile.am: Remove.
	* configure.ac: Reflect changes above.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* clock/p_clock.c, ide/pcmcia_ide.c, include/bsp.h, include/coverhd.h,
	irq/irq.c, irq/irq.h, irq/irq_asm.S, irq/irq_init.c,
	startup/bspstart.c, startup/bspstart.c.nocache, startup/imbx8xx.c,
	startup/mmutlbtab.c, startup/setvec.c, startup/start.S,
	vectors/vectors.h, vectors/vectors_init.c: URL for license changed.

2003-08-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* ide/Makefile.am: Don't include @RTEMS_BSP@.cfg.
